objects/amc__Agenda_Item__c.object
<CustomObject>
    <description>The Agenda Item Object is used to identify the agenda for a Meeting.</description>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Action that time will be logged against when discussing this Agenda Item</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Add_to_Next_Meeting__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this field if this Agenda Item should be included in the next Meeting within this Meeting Manager</inlineHelpText>
        <label>Add to Next Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Added_to_Next_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies that this Agenda Item has been added to the Next Meeting</inlineHelpText>
        <label>Added to Next Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Meeting this Agenda Item relates to</inlineHelpText>
        <label>Meeting</label>
        <referenceTo>amc__Meeting__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Agenda Item was resolved within this meeting</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Sort_Order__c</fullName>
        <description>determines the sort order on the meeting manager</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Summary__c</fullName>
        <inlineHelpText>Identifies the details of the Agenda Item</inlineHelpText>
        <label>Summary</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Agenda Item</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Summary__c</columns>
        <columns>amc__Resolved__c</columns>
        <columns>amc__Add_to_Next_Meeting__c</columns>
        <columns>amc__Meeting__c</columns>
        <columns>amc__Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Prevent_Resolved_and_ATNM_Being_True</fullName>
        <active>true</active>
        <description>Ensures Resolved and Add to Next Meeting cannot both be true</description>
        <errorConditionFormula>AND(amc__Add_to_Next_Meeting__c,amc__Resolved__c)</errorConditionFormula>
        <errorMessage>You cannot set Resolved and Add to Next Meeting as true</errorMessage>
    </validationRules>
</CustomObject>